Windows QPA: Fix blurry title icons with fractional scale factor

Request the icon pixmaps with DPR=1.

Fixes: QTBUG-90363
Change-Id: I789a72e2ed3379c81c68e1074069823bf633cf2f
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>